tests/ui/specialization/min_specialization/spec-marker-supertraits.stderr
error: cannot specialize on trait `HasMethod`
  --> $DIR/spec-marker-supertraits.rs:22:9
   |
LL | impl<T: Marker> Spec for T {
   |         ^^^^^^

error: aborting due to 1 previous error

